# OpenShell

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .image-garden.mk  .markdownlint-cli2.jsonc  .packit.yaml  AGENTS.md  CI.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SPIKE.md  TESTING.md  THIRD-PARTY-NOTICES  dco-signatures.json  dev-sandbox-policy.rego  dev-sandbox-policy.yaml  devenv.nix  devenv.yaml  flake.nix  inference-routes.yaml  install-dev.sh  install-legacy.sh  install-vm.sh  install.sh  mise.toml  openshell.spec  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  snapcraft.yaml  spread.yaml
.cargo/: config.toml
.docker-cargo-home/: .global-cache
.github/: CODEOWNERS  VOUCHED  VOUCHED.td
Casks/: openshell-dev.rb
Formula/: openshell-dev.rb  openshell.rb
architecture/: README.md  aegis-governance.md  build-containers.md  build.md  ci-e2e.md  cli.md  cluster-single-node.md  compute-runtimes.md  custom-vm-runtime.md  docker-driver.md  docs-site.md  gateway-deploy-connect.md  gateway-security.md  gateway-settings.md  gateway-single-node.md  gateway.md  gpu-support.md  inference-routing.md  kubernetes-user-namespaces-ocp-testing.md  kubernetes-user-namespaces.md  oidc-auth.md  oidc-local-testing.md  podman-driver.md  podman-rootless-networking.md  policy-advisor.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  security-policy.md  supervisor-helpers.md  system-architecture.md  tui.md  vm-driver.md  vm-gpu-passthrough.md
crates/openshell-controller/: Cargo.toml
crates/openshell-controller/examples/: standalone.rs
crates/openshell-controller/src/: config.rs  gateway.rs  lib.rs  reconcile.rs  translate.rs  types.rs
crates/openshell-controller/tests/: e2e_reconciler.rs
crates/openshell-controller/tests/kind/: Makefile  bootstrap.sh  kind-cluster.yaml  sample.yaml  teardown.sh
crates/openshell-driver-apple-container/: Cargo.toml  README.md
crates/openshell-driver-apple-container/src/: cli.rs  config.rs  driver.rs  grpc.rs  lib.rs
crates/openshell-driver-bluefield/: Cargo.toml  README.md
crates/openshell-driver-bluefield/bf-core/: Cargo.toml
crates/openshell-driver-bluefield/bf-core/src/: assignment.rs  claim.rs  env.rs  error.rs  handles.rs  lib.rs  lifecycle.rs  role.rs  runtime.rs  state.rs
crates/openshell-driver-bluefield/bf-driver/: Cargo.toml
crates/openshell-driver-bluefield/bf-driver/src/: main.rs
crates/openshell-driver-bluefield/bf-inventory/: Cargo.toml
crates/openshell-driver-bluefield/bf-inventory/src/: inventory.rs  lib.rs  pool.rs
crates/openshell-driver-bluefield/bf-vm/: Cargo.toml  README.md
crates/openshell-driver-bluefield/bf-vm/scripts/: guest-egress-dropin.sh
crates/openshell-driver-bluefield/bf-vm/src/: cli.rs  config.rs  extension.rs  guest_egress.rs  host_pf.rs  kernel.rs  lib.rs  preflight.rs  qemu_kernel_resolver.rs  slots.rs  state.rs  vf.rs
crates/openshell-driver-bluefield/bf-vm/src/extensions/: mod.rs
crates/openshell-driver-bluefield/src/: lib.rs
crates/openshell-driver-db-credstore/: Cargo.toml
crates/openshell-driver-db-credstore/src/: lib.rs
crates/openshell-mxc-bridge/: Cargo.toml
crates/openshell-mxc-bridge/src/: invoke.rs  lib.rs  schema_alpha.rs  schema_dev.rs  translate.rs
crates/openshell-mxc-bridge/tests/: translate.rs
crates/openshell-provider-auth/: Cargo.toml
crates/openshell-provider-auth/src/: lib.rs  microsoft_s2s.rs
crates/openshell-supervisor-networking/: Cargo.toml
crates/openshell-supervisor-networking/src/: identity.rs  lib.rs
crates/openshell-supervisor-networking/tests/: system_inference.rs  websocket_upgrade.rs
crates/openshell-supervisor-process/: Cargo.toml
crates/openshell-supervisor-process/src/: lib.rs  process.rs  run.rs  ssh.rs  supervisor_session.rs
crates/openshell-supervisor-process/src/bypass_monitor/: mod.rs
crates/openshell-supervisor-process/src/netns/: mod.rs
crates/openshell-supervisor-process/src/sandbox/linux/: mod.rs
docs/: CONTRIBUTING.md  conf.py  index.md  index.mdx  index.yml  project.json  troubleshooting.md  versions1.json
e2e/: mcp-conformance.sh  test-install.sh  with-docker-gateway.sh  with-kube-gateway.sh  with-podman-gateway.sh
examples/: bring-your-own-container.md  gateway-deploy-connect.md  openclaw.md  sync-files.md  vscode-remote-sandbox.md
examples/policy-source/: Cargo.toml  README.md  gateway-filesystem.toml  gateway-grpc.toml  smoke.sh
examples/policy-source/bundle/policies/: default.yaml  github.yaml  gitlab.yaml
examples/policy-source/bundle/providers/: example.yaml
examples/policy-source/src/: main.rs
feature-requests/: README.md
fern/: README.md  docs.yml  fern.config.json  main.css
nix/: README.md  constants.nix  container-test.nix  container.nix  crate.nix  images.nix  package.nix  shell.nix  source-filter.nix
node/: README.md  package-lock.json  package.json  tsconfig.json
openshell-agents/: Dockerfile.gator  README.md  run.sh
proto/: chat.proto  compute_driver.proto  credential_driver.proto  datamodel.proto  gateway_interceptor.proto  inference.proto  navigator.proto  openshell.proto  policy_source.proto  sandbox.proto  test.proto
providers/: anthropic-oauth.yaml  aws-bedrock.yaml  aws-s3.yaml  claude-code.yaml  codex.yaml  docker-agent.yaml  enclawed.yaml  github.yaml  google-drive.yaml  microsoft-agent-s2s.yaml  model-runner.yaml  nvidia.yaml  okta-obo.yaml  okta-xaa.yaml  okta.yaml  outlook.yaml  xaa-dev.yaml
rfc/: 0000-template.md  0001-agent-driven-policy-management.md  0002-supervisor-initiated-connectivity.md  README.md
scripts/: container-cleanup.sh  generate_third_party_notices.py  openshell-sdk-oidc-smoke.sh  remote-deploy.sh  smoke-test-network-policy.sh  update_license_headers.py
snap/: snapcraft.yaml
spike/: README.md  kubernetes-isolation-tradeoffs-diagram.html  kubernetes-node-enforcer-options-diagram.html  openshell-isolation-diagram.html
tasks/: ci.toml  cluster.toml  container.toml  docker.toml  docs.toml  fern.toml  gateway.toml  gator.toml  helm.toml  python.toml  (+11 more)
(+1802 files in other folders)
