# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-controller"
description = "In-process Kubernetes controller that reconciles OpenShellSandbox CRDs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core" }
openshell-policy = { path = "../openshell-policy" }

anyhow = { workspace = true }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
kube-runtime = { workspace = true }
prost-types = { workspace = true }
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
openshell-core = { path = "../openshell-core" }
tokio = { workspace = true }
tonic = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
