# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-mxc-bridge"
description = "Translate OpenShell SandboxPolicy + EnvelopePolicy into MXC ContainerConfig and build wxc-exec invocations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
openshell-core = { path = "../openshell-core" }
openshell-policy = { path = "../openshell-policy" }

base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
