# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-supervisor-process"
description = "Process component of the OpenShell supervisor: entrypoint spawn, SSH server, supervisor session, netns, bypass monitor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
miette = { workspace = true }
tokio = { workspace = true }

[features]
## Expose proposals::test_helpers (`ProposalsFlagGuard`) to downstream test
## code in other crates. Enabled by openshell-supervisor-networking and
## openshell-sandbox dev-dependencies.
test-helpers = []

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
